= Changelog

:repo: https://github.com/rotaract/rotaract-family
:github-pr: {repo}/pull
:compare: {repo}/compare

All notable changes to this project will be documented in this file.

// The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog], and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== {compare}/v1.9.0\...main[Unreleased]

== {compare}/v1.8.0\...v1.9.0[1.9.0] - 2025-09-25

=== Fixed

* Club logo positioning.
* Default colors, especially in footer.

=== Changed

* Full usage of default colors and typography, replacing hardcoded styles.
* Embedded social media icons as part of HTML, making usage of CSS rules.
* Updated X (Twitter) name and icon.

=== Added

* Social media icon to link WhatsApp channel or single chat.
* Bash script for updating social media icons from https://fontawesome.com[Font Awesome].

== {compare}/v1.7.0\...v1.8.0[1.8.0] - 2025-08-10

=== Changed

* Disabled snowflake theme by default to avoid the step of disabling it for new websites.
* Update social media icons, taken from https://fontawesome.com/#fa7[Font Awesome 7].

=== Added

* Social media icon to link TikTok profile.

== {compare}/v1.6.0\...v1.7.0[1.7.0] - 2023-02-22

=== Changed

* Snowflakes theme mod to revert former default value. Snowflakes effect is disabled by default now.

== {compare}/v1.5.1\...v1.6.0[1.6.0] - 2022-12-23

=== Added

* New customizer setting for cookie policy page link in footer.

== {compare}/v1.5.0\...v1.5.1[1.5.1] - 2022-12-13

=== Fixed

* jQuery error on triggering Snowflakes.
* PHP warnings because of not correctly enqueued scripts.

== {compare}/v1.4.1\...v1.5.0[1.5.0] - 2022-12-03

=== Fixed

* PHP error caused by sprintf function in customizer.

=== Added

* Snowflakes. No really.

== {compare}/v1.4.1\...v1.4.2[1.4.2] - 2022-11-28

=== Fixed

* Fix color codes to match Rotary's latest guidelines.

=== Added

* Improvements for Google PageSpeed
** Load fonts in non-blocking swap period.