@@ -7,7 +7,13 @@ function enqueue_child_scripts() {
     if ( get_theme_mod( 'snowflakes', false ) ) {
         wp_enqueue_script( 'snowflakes', get_stylesheet_directory_uri() . '/assets/js/snowflakes.min.js', array(), '6.0.0', true );
     }
-    wp_enqueue_script( 'script', get_stylesheet_directory_uri() . '/assets/js/script.js', array(), '1.0.0', true );
+    wp_enqueue_script( 'script', get_stylesheet_directory_uri() . '/assets/js/script.js', array(), '1.1.0', true );
+
+    wp_add_inline_script(
+        'script',
+        'linkConfirmationEnabled = ' . var_export(get_theme_mod( 'link_confirmation', true ), true) . ';',
+        'before'
+    )
 }
 
 add_action( 'wp_enqueue_scripts', 'enqueue_child_scripts', 60 );
